--- a/src/app/auth/profile/components/userscript/userscript.component.html
+++ b/src/app/auth/profile/components/userscript/userscript.component.html
@@ -49,7 +49,7 @@
 						   style="font-size: 20px; padding: 8px; width: 100%; color: white; overflow: hidden; text-overflow: ellipsis;"
 						   href="https://api.grepodata.com/script/indexer.user.js" target="_blank"
 						   (click)="clicked=true">
-							<span class="fa fa-download"></span> Install userscript <span class="gd-primary" style="vertical-align: baseline;">{{key}}</span>
+							<span class="fa fa-download"></span> Install userscript
 						</a>
 					</div>
 
