--- a/src/app/alliance/alliance.component.html
+++ b/src/app/alliance/alliance.component.html
@@ -2,9 +2,8 @@
 
 <div style="padding: 1px; overflow-x: auto;">
 
-  <mat-card class="decorated-card">
-    <mat-card-title id="pagehead">
-    </mat-card-title>
+  <div>
+    <div id="pagehead"></div>
     <mat-card-content *ngIf="notFound===true">
       <div class="alert alert-warning text-center">
         <br/>
@@ -18,13 +17,17 @@
     <mat-card-content *ngIf="!notFound">
 
       <div class="alliance-cards" style="" fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap="5px">
-        <mat-card fxFlex="25">
-          <mat-card-title class="text-center">
-            <h1 style='color: #304357;' class="entity-name">
-              <img style="height: 25px; margin-top: -5px;" src="../../assets/images/ally_ico.png"/> {{allianceName}}
+        <mat-card class="index-card" fxFlex="25">
+          <div class="card-header bg-gd-1 text-center" style="padding-bottom: 20px !important;">
+            <h1 class="gd-white entity-name">
+	            <div class="icon-circle"><img style="height: 25px; margin-top: -5px;" src="../../assets/images/ally_ico.png"/></div> {{allianceName}}
             </h1>
-            <mat-spinner style="margin-left: 30px;" *ngIf="loadingInfo" strokeWidth="3" [diameter]="30"></mat-spinner>
-          </mat-card-title>
+	          <div *ngIf="loadingInfo || loadingHistory || loadingMembers" style="position: relative; top: 10px; height: 0px; margin: 0px -30px;">
+		          <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+	          </div>
+          </div>
+
+
           <mat-card-content [ngClass]="{'loading-overlay': loadingInfo}">
             <table class="table table-no-more alliance-info">
               <tbody>
@@ -103,7 +106,7 @@
           </mat-card-content>
         </mat-card>
 
-        <mat-card fxFlex="75">
+        <mat-card class="index-card" fxFlex="75" style="padding-bottom: 0px !important; padding-top: 10px !important;">
 	        <div #infoTabs style="width: 100%;"></div>
           <mat-tab-group mat-stretch-tabs animationDuration="0ms" [selectedIndex]="tabsIndex"
                          (click)="cdr.detectChanges();" (selectedTabChange)="onTabClick($event)">
@@ -155,75 +158,83 @@
 		          <ng-template mat-tab-label>
 			          <mat-icon style="opacity: 1; vertical-align: bottom;">watch_later</mat-icon>&nbsp;Activity<span class="hidden-xs">&nbsp;heatmap</span>
 		          </ng-template>
-		          <mat-spinner style="margin-left: 30px;" *ngIf="loadingMembers" strokeWidth="3" [diameter]="30"></mat-spinner>
-		          <mat-card-content style="overflow: hidden;" *ngIf="!loadingMembers && allianceMembersData?.members.length > 0">
-			          <div class="container-fluid" style="padding-right: 40px;">
-				          <div class="row" style="overflow: hidden;">
-					          <div #overviewLeft class="col-xs-12 col-sm-6 text-center">
-						          <form class="form-inline">
-							          <label style='font-weight: 700; font-size: 18px; margin: 12px; line-height: 1.1;'>
-								          <span class='world-title gd-primary'>Least active player on</span>
-							          </label>
-							          <select #dayOfWeek id="dayOfWeek" name="dayOfWeek" [(ngModel)]="selectedDay" class="form-control mr-2" (change)="renderPlayerActivity($event)">
-								          <option *ngFor="let day of daysOfWeek; let i = index;" [ngValue]="i">{{day}}</option>
-							          </select>
-						          </form>
-
-						          <ngx-charts-bar-horizontal
-							          [animations]="false"
-							          [view]="[overviewLeft.offsetWidth-50, 60 + leastActiveDay.length * 24]"
-							          [scheme]="{domain: ['#297fb9']}"
-							          [results]="leastActiveDay"
-							          [gradient]="false"
-							          [xAxis]="true"
-							          [yAxis]="true"
-							          [legend]="false"
-							          [showXAxisLabel]="true"
-							          [showYAxisLabel]="false"
-							          [roundDomains]="true"
-							          [barPadding]="2"
-							          [showDataLabel]="false"
-							          [xAxisLabel]="'Activity'"
-							          [yAxisLabel]="'Player'"
-							          (select)="onPlayerClick($event)">
-						          </ngx-charts-bar-horizontal>
-					          </div>
-					          <div #overviewRight class="col-xs-12 col-sm-6 text-center">
-						          <form class="form-inline">
-							          <label style='font-weight: 700; font-size: 18px; margin: 12px; line-height: 1.1;'>
-								          <span class='world-title gd-primary'>Least active player at</span>
-							          </label>
-							          <select #hourOfDay id="hourOfDay" name="hourOfDay" [(ngModel)]="selectedHour" class="form-control mr-2" (change)="renderPlayerActivity($event)">
-								          <option *ngFor="let hour of hoursOfDay; let i = index;" [ngValue]="i">{{i<10?'0':''}}{{i}}:00</option>
-							          </select>
-						          </form>
-
-						          <ngx-charts-bar-horizontal
-							          [animations]="false"
-							          [view]="[overviewRight.offsetWidth-50, 60 + leastActiveHour.length * 24]"
-							          [scheme]="{domain: ['#297fb9']}"
-							          [results]="leastActiveHour"
-							          [gradient]="false"
-							          [xAxis]="true"
-							          [yAxis]="true"
-							          [legend]="false"
-							          [showXAxisLabel]="true"
-							          [showYAxisLabel]="false"
-							          [roundDomains]="true"
-							          [barPadding]="2"
-							          [showDataLabel]="false"
-							          [xAxisLabel]="'Activity'"
-							          [yAxisLabel]="'Player'"
-							          (select)="onPlayerClick($event)">
-						          </ngx-charts-bar-horizontal>
-					          </div>
-				          </div>
+		          <mat-card-content style="overflow: hidden;">
+			          <div>
+				          <h4 style='font-weight: 300; color: #304357;'><span class='world-title' style='color: #18BC9C;'>This feature has been removed.</span></h4>
+				          <p>Due to privacy concerns, the activity heatmap feature has been removed from GrepoData entirely.<br/>
+					          The main reason for this change is that the heatmap exposed personal activity patterns, without the possibility for individuals to delete this information as is required by GDPR.
+					          <br/>
+					          We are sorry for the inconvenience. We are in the process of getting the city indexer userscript approved, and this is one of the changes that have been made to GrepoData in that process.
+				          </p>
 			          </div>
+			          <!---->
+			          <!--<div class="container-fluid" style="padding-right: 40px;">-->
+				          <!--<div class="row" style="overflow: hidden;">-->
+					          <!--<div #overviewLeft class="col-xs-12 col-sm-6 text-center">-->
+						          <!--<form class="form-inline">-->
+							          <!--<label style='font-weight: 700; font-size: 18px; margin: 12px; line-height: 1.1;'>-->
+								          <!--<span class='world-title gd-primary'>Least active player on</span>-->
+							          <!--</label>-->
+							          <!--<select #dayOfWeek id="dayOfWeek" name="dayOfWeek" [(ngModel)]="selectedDay" class="form-control mr-2" (change)="renderPlayerActivity($event)">-->
+								          <!--<option *ngFor="let day of daysOfWeek; let i = index;" [ngValue]="i">{{day}}</option>-->
+							          <!--</select>-->
+						          <!--</form>-->
 
-			          <p class="gd-secondary">This tab shows player activity for the members of this alliance at the specified time.
-				          Player activity is a metric that we calculate based on the attack frequency in the last 4 weeks.
-				          An activity value of 1 means that the player did not send any attacks in that timeframe.
-				          All times are in the same timezone as the local Grepolis server.</p>
+						          <!--<ngx-charts-bar-horizontal-->
+							          <!--[animations]="false"-->
+							          <!--[view]="[overviewLeft.offsetWidth-50, 60 + leastActiveDay.length * 24]"-->
+							          <!--[scheme]="{domain: ['#297fb9']}"-->
+							          <!--[results]="leastActiveDay"-->
+							          <!--[gradient]="false"-->
+							          <!--[xAxis]="true"-->
+							          <!--[yAxis]="true"-->
+							          <!--[legend]="false"-->
+							          <!--[showXAxisLabel]="true"-->
+							          <!--[showYAxisLabel]="false"-->
+							          <!--[roundDomains]="true"-->
+							          <!--[barPadding]="2"-->
+							          <!--[showDataLabel]="false"-->
+							          <!--[xAxisLabel]="'Activity'"-->
+							          <!--[yAxisLabel]="'Player'"-->
+							          <!--(select)="onPlayerClick($event)">-->
+						          <!--</ngx-charts-bar-horizontal>-->
+					          <!--</div>-->
+					          <!--<div #overviewRight class="col-xs-12 col-sm-6 text-center">-->
+						          <!--<form class="form-inline">-->
+							          <!--<label style='font-weight: 700; font-size: 18px; margin: 12px; line-height: 1.1;'>-->
+								          <!--<span class='world-title gd-primary'>Least active player at</span>-->
+							          <!--</label>-->
+							          <!--<select #hourOfDay id="hourOfDay" name="hourOfDay" [(ngModel)]="selectedHour" class="form-control mr-2" (change)="renderPlayerActivity($event)">-->
+								          <!--<option *ngFor="let hour of hoursOfDay; let i = index;" [ngValue]="i">{{i<10?'0':''}}{{i}}:00</option>-->
+							          <!--</select>-->
+						          <!--</form>-->
+
+						          <!--<ngx-charts-bar-horizontal-->
+							          <!--[animations]="false"-->
+							          <!--[view]="[overviewRight.offsetWidth-50, 60 + leastActiveHour.length * 24]"-->
+							          <!--[scheme]="{domain: ['#297fb9']}"-->
+							          <!--[results]="leastActiveHour"-->
+							          <!--[gradient]="false"-->
+							          <!--[xAxis]="true"-->
+							          <!--[yAxis]="true"-->
+							          <!--[legend]="false"-->
+							          <!--[showXAxisLabel]="true"-->
+							          <!--[showYAxisLabel]="false"-->
+							          <!--[roundDomains]="true"-->
+							          <!--[barPadding]="2"-->
+							          <!--[showDataLabel]="false"-->
+							          <!--[xAxisLabel]="'Activity'"-->
+							          <!--[yAxisLabel]="'Player'"-->
+							          <!--(select)="onPlayerClick($event)">-->
+						          <!--</ngx-charts-bar-horizontal>-->
+					          <!--</div>-->
+				          <!--</div>-->
+			          <!--</div>-->
+
+			          <!--<p class="gd-secondary">This tab shows player activity for the members of this alliance at the specified time.-->
+				          <!--Player activity is a metric that we calculate based on the attack frequency in the last 4 weeks.-->
+				          <!--An activity value of 1 means that the player did not send any attacks in that timeframe.-->
+				          <!--All times are in the same timezone as the local Grepolis server.</p>-->
 
 		          </mat-card-content>
 	          </mat-tab>
@@ -332,11 +343,13 @@
 
       </div>
 
-	    <app-advertorial *ngIf="!loadingInfo && (members > 20 || rank < 50)"></app-advertorial>
+	    <div style="margin: -5px 17px" *ngIf="!loadingInfo && (members > 20 || rank < 50)">
+		    <app-advertorial></app-advertorial>
+	    </div>
 
       <div class="alliance-cards" fxLayout="column" fxLayout.gt-md="row" fxLayoutGap="5px">
 
-        <mat-card fxFlex="60" fxFlex.gt-md="60" fxFlex.gt-xs="100">
+        <mat-card class="index-card" fxFlex="60" fxFlex.gt-md="60" fxFlex.gt-xs="100">
           <mat-card-title>
             <div fxLayout="row">
               <h4 style='font-weight: 300; color: #304357;'><span class='world-title' style='color: #18BC9C;'>Members</span></h4>
@@ -493,7 +506,7 @@
           </mat-card-content>
         </mat-card>
 
-        <mat-card fxFlex="40">
+        <mat-card class="index-card" fxFlex="40">
           <mat-card-content>
 
 	          <app-conquest [embedded]="true" [params]="{type: 'alliance', world: world, id: id}"></app-conquest>
@@ -506,6 +519,6 @@
 	    <br/>
 
     </mat-card-content>
-  </mat-card>
+  </div>
 
 </div>
