--- a/src/app/indexer/player/player.component.html
+++ b/src/app/indexer/player/player.component.html
@@ -1,8 +1,15 @@
-<div style="overflow-x: hidden;">
+<div style="overflow-x: hidden; min-height: 100%;">
 
-	<mat-card class="index-card" [ngClass]="{'embedded-padding': embedded}"
-	          [ngStyle]="{'background': !embedded?'#fff':''}">
-		<div class="card-header bg-gd-2 text-center" *ngIf="!embedded" style="margin-bottom: 0;">
+	<p class="gd-secondary profile-breadcrumbs">
+		<a class="a-link-dialog" routerLink="/profile/indexes">My indexes</a>
+		> World <a class="a-link-dialog" routerLink="/points/{{world}}">{{world}}</a>
+		> Index <a class="a-link-dialog" routerLink="/profile/overview/{{key}}">{{key}}</a>
+		> Alliance <a class="a-link-dialog" routerLink="/profile/alliance/{{key}}/{{world}}/{{allianceId}}">{{allianceName}}</a>
+		> Player <a class="a-link-dialog" routerLink="/player" [queryParams]="{world: world, id: id}">{{playerName}}</a>
+	</p>
+
+	<div [ngClass]="{'embedded-padding': embedded}">
+		<!--<div class="card-header bg-gd-2 text-center" *ngIf="!embedded" style="margin-bottom: 0;">-->
 
       <!--<div style="position: absolute; top: 10px; max-width: 200px;">-->
         <!--<button mat-button class="mat-raised-button bg-gd-2" style="width: 100%; overflow: hidden; text-overflow: ellipsis;" routerLink="/indexer/{{key}}">-->
@@ -10,27 +17,27 @@
         <!--</button>-->
       <!--</div>-->
 
-      <h1>
-        Showing collected intel for:
-        <span class="gd-primary">{{playerName}}<span *ngIf="loading && playerName == ''">Loading...</span></span>
-      </h1>
-      <h3 *ngIf="!loading">
-        <span class="index-title hidden-xs">
-          Index: <span class='world-title'><a class="a-link-dialog" routerLink="/indexer/{{key}}">{{key}}</a></span>
-        </span>
-        <span class="index-title">
-          World: <span class='world-title gd-secondary' *ngIf="world"><div class="bg-flag flag-inline-title flag-{{world.substr(0,2)}}"></div>&nbsp;<a class="a-link-dialog" routerLink="/points" [queryParams]="{world: world}">{{worldName}}&nbsp;({{world}})</a></span>
-        </span>
-        <span class="index-title" *ngIf="allianceId != 0">
-          Alliance: <span class='world-title gd-primary'><a class="a-link-dialog" routerLink="/indexer/alliance/{{key}}/{{world}}/{{allianceId}}">{{allianceName}}</a></span>
-        </span>
-        <span class="index-title">
-          Stats: <span class='world-title gd-primary'><a class="a-link-dialog" routerLink="/player" [queryParams]="{world: world, id: id}">View player statistics</a></span>
-        </span>
-      </h3>
-			<h3 *ngIf="loading">&nbsp;</h3>
+      <!--<h1>-->
+        <!--Showing collected intel for:-->
+        <!--<span class="gd-primary">{{playerName}}<span *ngIf="loading && playerName == ''">Loading...</span></span>-->
+      <!--</h1>-->
+      <!--<h3 *ngIf="!loading">-->
+        <!--<span class="index-title hidden-xs">-->
+          <!--Index: <span class='world-title'><a class="a-link-dialog" routerLink="/indexer/{{key}}">{{key}}</a></span>-->
+        <!--</span>-->
+        <!--<span class="index-title">-->
+          <!--World: <span class='world-title gd-secondary' *ngIf="world"><div class="bg-flag flag-inline-title flag-{{world.substr(0,2)}}"></div>&nbsp;<a class="a-link-dialog" routerLink="/points" [queryParams]="{world: world}">{{worldName}}&nbsp;({{world}})</a></span>-->
+        <!--</span>-->
+        <!--<span class="index-title" *ngIf="allianceId != 0">-->
+          <!--Alliance: <span class='world-title gd-primary'><a class="a-link-dialog" routerLink="/indexer/alliance/{{key}}/{{world}}/{{allianceId}}">{{allianceName}}</a></span>-->
+        <!--</span>-->
+        <!--<span class="index-title">-->
+          <!--Stats: <span class='world-title gd-primary'><a class="a-link-dialog" routerLink="/player" [queryParams]="{world: world, id: id}">View player statistics</a></span>-->
+        <!--</span>-->
+      <!--</h3>-->
+			<!--<h3 *ngIf="loading">&nbsp;</h3>-->
 
-    </div>
+    <!--</div>-->
     <mat-card-content class="decorated-card-content" [ngClass]="{'embedded-padding': embedded}" style="padding: 0 !important;">
 
       <!--<app-index-search [indexKey]="key" *ngIf="!embedded"></app-index-search>-->
@@ -48,7 +55,6 @@
 
       <div *ngIf="err != ''" class="text-center">
           <br/>
-          <br/>
           <div class="alert alert-gd-1 text-center">
               <h2 class="gd-primary">No intel available</h2>
               <h4>
@@ -61,11 +67,16 @@
 
 	      <!--<app-advertorial *ngIf="!loading && !embedded && totalCount > 30"></app-advertorial>-->
 
-	      <div style="width: calc(100vw - 68px); margin: auto;">
-		      <app-index-version *ngIf="!embedded && !loading" [version]="version" [message]="message" [key]="key"></app-index-version>
-	      </div>
+	      <!--<div style="width: calc(100vw - 68px); margin: auto;">-->
+		      <!--<app-index-version *ngIf="!embedded && !loading" [version]="version" [message]="message" [key]="key"></app-index-version>-->
+	      <!--</div>-->
 
-        <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+	      <div *ngIf="loading" class="text-center">
+		      <div class="align-middle" style="position: relative; top: 250px; left: 25%; width: 50%;">
+			      <h3 class="gd-primary"><strong>Loading player intel...</strong></h3>
+			      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+		      </div>
+	      </div>
 
         <div *ngIf="!noIntel && !loading" >
 
@@ -98,10 +109,7 @@
         </div>
 
         <div *ngIf="!embedded && !loading" style="max-width: 1700px; margin: auto;">
-          <br/>
-          <br/>
-
-          <mat-card>
+          <mat-card class="index-card">
             <mat-card-title>
               <div fxLayout="row">
                 <h3 style='font-weight: 300; color: #304357;'>
@@ -149,7 +157,7 @@
       </div>
 
     </mat-card-content>
-  </mat-card>
+  </div>
 
   <div class="row" *ngIf="!noIntel && err=='' && !loading">
     <div class="col-lg-12 text-center">
@@ -161,7 +169,18 @@
 
 <!--sea units-->
 <ng-template #seaunits>
-	<mat-card class="text-center">
+	<mat-card class="index-card text-center">
+
+		<!--<div class="card-header bg-gd-1">-->
+			<!--<div class="form-group row" style='margin: 0px;'>-->
+				<!--<h1 class="entity-name gd-white">-->
+					<!--<span class=''>Sea units: &nbsp;</span>-->
+					<!--<span class="hidden-xs" *ngIf="!embedded">-->
+						<!--<div class="icon-circle"><img src="../../assets/images/player_ico.png" style="height: 28px; margin-top: -5px;"/></div>&nbsp;<span>{{playerName}}</span>-->
+          <!--</span>-->
+				<!--</h1>-->
+			<!--</div>-->
+		<!--</div>-->
 
 		<mat-card-title>
 			<div class="form-group row" style='margin: 0px;'>
@@ -196,14 +215,26 @@
 
 <!--land units-->
 <ng-template #landunits>
-	<mat-card class="text-center">
+	<mat-card class="index-card text-center">
+
+		<!--<div class="card-header bg-gd-1">-->
+			<!--<div class="form-group row" style='margin: 0px;'>-->
+				<!--<h1 class="entity-name gd-white">-->
+					<!--<span class=''>Land units: &nbsp;</span>-->
+					<!--<span class="hidden-xs" *ngIf="!embedded">-->
+						<!--<div class="icon-circle"><img src="../../assets/images/player_ico.png" style="height: 28px; margin-top: -5px;"/></div>&nbsp;<span>{{playerName}}</span>-->
+          <!--</span>-->
+				<!--</h1>-->
+			<!--</div>-->
+		<!--</div>-->
+
 		<mat-card-title>
 			<div class="form-group row" style='margin: 0px;'>
 				<h1 style='font-weight: 300; color: #304357; margin: 0;'>
 					<span class='world-title' style='color: #18BC9C;'>Land units</span>
 					<span class="hidden-xs" *ngIf="!embedded">
-	          &nbsp;<img src="../../assets/images/player_ico.png" style="height: 28px; margin-top: -5px;"/>&nbsp;<span>{{playerName}}</span>
-	        </span>
+            &nbsp;<img src="../../assets/images/player_ico.png" style="height: 28px; margin-top: -5px;"/>&nbsp;<span>{{playerName}}</span>
+          </span>
 				</h1>
 			</div>
 		</mat-card-title>
