--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,10 +1,8 @@
 <app-search [compare]="true"></app-search>
 
 <div>
-  <mat-card class="decorated-card">
-    <mat-card-title class='' id="pagehead">
-
-    </mat-card-title>
+  <div>
+    <div class='' id="pagehead"></div>
     <mat-card-content *ngIf="notFound">
       <div class="alert alert-warning text-center">
         <br/>
@@ -18,12 +16,15 @@
     <mat-card-content *ngIf="!notFound">
 
       <div class="player-cards" fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap="5px">
-        <mat-card fxFlex="25">
-          <mat-card-title class="text-center">
-            <h1 style='color: #304357;' class="entity-name">
-              <img style="height: 25px; margin-top: -5px;" src="../../assets/images/player_ico.png"/> {{playerName}}
+        <mat-card class="index-card" fxFlex="25">
+          <div class="card-header bg-gd-1 text-center" style="padding-bottom: 20px !important;">
+            <h1 class="gd-white entity-name">
+              <div class="icon-circle"><img style="height: 25px; margin-top: -5px;" src="../../assets/images/player_ico.png"/></div> {{playerName}}
             </h1>
-          </mat-card-title>
+	          <div *ngIf="loadingInfo || loadingHistory || loadingChanges" style="position: relative; top: 10px; height: 0px; margin: 0px -30px;">
+		          <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+	          </div>
+          </div>
           <mat-card-content [ngClass]="{'loading-overlay': loadingInfo}">
 
             <table class="table table-no-more player-info">
@@ -152,7 +153,7 @@
           </mat-card-content>
         </mat-card>
 
-        <mat-card fxFlex="75">
+        <mat-card class="index-card" fxFlex="75" style="padding-bottom: 0px !important; padding-top: 10px !important;">
 	        <div #infoTabs style="width: 100%;"></div>
           <mat-tab-group [selectedIndex]="tabsIndex" (selectedTabChange)="onTabClick($event)" mat-stretch-tabs>
             <mat-tab class="history-chart" style="padding: 20px 0; overflow: hidden !important;">
@@ -208,12 +209,12 @@
               </ng-template>
               <br/>
 	            <mat-card-title>
-		            <div fxLayout="row">
+		            <div>
 		              <h4 style='font-weight: 300; color: #304357;'><span class='world-title' style='color: #18BC9C;'>This feature has been removed.</span></h4>
-			            <p>Due to privacy concerns, the activity heatmap feature has been removed from GrepoData entirely.
+			            <p>Due to privacy concerns, the activity heatmap feature has been removed from GrepoData entirely.<br/>
 				            The main reason for this change is that the heatmap exposed personal activity patterns, without the possibility for individuals to delete this information as is required by GDPR.
 			              <br/>
-				            We are sorry for the inconvenience.
+				            We are sorry for the inconvenience. We are in the process of getting the city indexer userscript approved, and this is one of the changes that have been made to GrepoData in that process.
 			            </p>
 	              </div>
 	            </mat-card-title>
@@ -369,11 +370,13 @@
 
       </div>
 
-	    <app-advertorial *ngIf="!loadingInfo && towns > 1 && rank <= 1000"></app-advertorial>
+	    <div style="margin: -5px 17px" *ngIf="!loadingInfo && towns > 1 && rank <= 1000">
+		    <app-advertorial></app-advertorial>
+	    </div>
 
       <div class="player-cards" fxLayout="column" fxLayout.gt-md="row" fxLayoutGap="5px">
 
-        <mat-card fxFlex fxFlex.gt-md="57" fxFlex.gt-sm="100">
+        <mat-card class="index-card" fxFlex fxFlex.gt-md="57" fxFlex.gt-sm="100">
           <mat-card-title>
             <div fxLayout="row">
               <h4 style='font-weight: 300; color: #304357;'><span class='world-title' style='color: #18BC9C;'>History</span></h4>
@@ -451,7 +454,7 @@
           </mat-card-content>
         </mat-card>
 
-        <mat-card fxFlex fxFlex.gt-md="43" fxFlex.gt-sm="100">
+        <mat-card class="index-card" fxFlex fxFlex.gt-md="43" fxFlex.gt-sm="100">
           <mat-card-content>
 
 	          <app-conquest [embedded]="true" [params]="{type: 'player', world: world, id: id}"></app-conquest>
@@ -464,6 +467,6 @@
 	    <br/>
 
     </mat-card-content>
-  </mat-card>
+  </div>
 
 </div>
